<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityLoginForm">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_form_background" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginForm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/carina"
            android:textColor="#ff6f00"
            android:textSize="62sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#4D000000"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/white"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/name_text"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColorHint="@color/white"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="sans-serif-light"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="sans-serif-light"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>

        <Switch
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/checkbox_text"
            android:textColor="#fff"
            android:textSize="16sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:fontFamily="sans-serif-light"
            android:letterSpacing="0.0"
            android:paddingLeft="60dp"
            android:paddingTop="10dp"
            android:paddingRight="60dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="22sp"
            app:backgroundTint="@color/selector_button_color"
            app:cornerRadius="32dp" />
    </LinearLayout>
</RelativeLayout>